# aws-region-nearby

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml  rust.yaml
aws-region-nearby/: Cargo.toml  aws.rs  deno.rs  error.rs
benchmarks/: advanced_statistics.py  ap-northeast-1-1665331957.csv  ap-northeast-1-1665331957.json  ap-south-1-1665326998.csv  ap-south-1-1665326998.json  ap-southeast-2-1665331664.csv  ap-southeast-2-1665331664.json  ca-central-1-1665332143.csv  ca-central-1-1665332143.json  eu-central-1-1665335951.csv  eu-central-1-1665335951.json  eu-central-1-1665432343.csv  eu-central-1-1665432343.json  eu-west-1-1665332180.csv  eu-west-1-1665332180.json  plot_histogram.py  plot_whisker.py  run.sh  sa-east-1-1665332412.csv  sa-east-1-1665332412.json  us-east-1-1665325797.csv  us-east-1-1665325797.json  us-east-2-1665326006.csv  us-east-2-1665326006.json  us-west-2-1665326592.csv  us-west-2-1665326592.json
examples/deno/: Cargo.toml  Makefile  README.md  index.ts  lib.rs
examples/infra/: README.md  bun.lockb  cdk.json  infra.ts  package.json
examples/sdk/: Cargo.toml
examples/sdk/src/: main.rs
examples/worker/: Cargo.toml  README.md  worker.rs  wrangler.toml
src/: aws.rs  deno.rs  error.rs  lib.rs  region.rs  regions.rs
worker/: Cargo.toml  worker.rs  wrangler.toml
worker/src/: lib.rs
