[package]
name = "aws-region-nearby"
version = "0.0.2-alpha"
description = "Find the nearest AWS region to a given location"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
geoutils = "0.4"
ordered-float = "2"
strum = { version = "0.23", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
