[package]
name = "aws-region-nearby"
version = "0.1.0"
description = "Find the nearest AWS region to a given location"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mlafeldt/aws-region-nearby"
documentation = "https://docs.rs/aws-region-nearby/"
homepage = "https://crates.io/crates/aws-region-nearby"
keywords = ["aws", "cloudflare", "edge", "webassembly"]
categories = ["wasm", "network-programming"]
edition = "2021"

[dependencies]
geoutils = "0.4"
ordered-float = "2"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
