[package]
name = "aws-region-nearby-deno"
version = "0.1.0"
description = "Deno isolate that tells visitors the name of the nearest AWS region"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
aws-region-nearby = { path = "../.." }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Request", "Response"] }
