[package]
name = "aws-region-nearby-deno"
version = "0.1.0"
description = "Deno isolate that tells visitors the name of the nearest AWS region"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
aws-region-nearby = { path = "../..", features = ["deno"] }
console_error_panic_hook = "0.1"
gloo-console = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Request", "Response", "Headers"] }
# https://github.com/softprops/tiny-dynamo/issues/8
tiny-dynamo = { git = "https://github.com/mlafeldt/tiny-dynamo", branch = "async", features = [
    "reqwest",
] }
