[package]
name = "aws-region-nearby-sdk"
version = "0.1.0"
description = "Example showing how to use aws-region-nearby with different AWS SDKs"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
aws-region-nearby = { path = "../../aws-region-nearby" }
# AWS SDK
aws-types = "0.47"
# Rusoto
rusoto_core = "0.48"
