[package]
name = "aws-region-nearby-worker"
version = "0.1.0"
description = "Cloudflare Worker that tells visitors the name of the nearest AWS region"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[lib]
path = "worker.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
aws-region-nearby = { path = "../../aws-region-nearby" }
console_error_panic_hook = "0.1"
js-sys = "0.3"
worker = "0.0.19"
# https://github.com/softprops/tiny-dynamo/issues/8
tiny-dynamo = { git = "https://github.com/mlafeldt/tiny-dynamo", branch = "async", features = [
    "reqwest",
] }
